INT-18 Updated input text size to stop auto zoom on mobile, canditiate search header only visible when search, removed box shadow from tables, added sidebar colour effect for active link

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -51,6 +51,18 @@
   font-weight: bold;
 }
 
+.sidebar-link-active {
+  padding-left: 2rem;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  height: 100%;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: white;
+  background-color: rgb(124,126,132,0.5);
+}
+
 .sidebar-icon{
   padding-right: 1rem;
   font-size: 1.4rem;
